--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,11 +22,7 @@
             android:name=".CampaignViewActivity"
             android:label="@string/app_name" />
         <activity android:name=".LandingActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".MurshidSignInActivity" />
         <!--
@@ -46,7 +42,14 @@
             android:label="@string/title_activity_main_points_map" />
         <activity
             android:name=".TrackGuideActivity"
-            android:label="@string/title_activity_track_guide"></activity>
+            android:label="@string/title_activity_track_guide" />
+        <activity android:name=".SplashScreenActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
